Add inverse selection

--- a/TheDump.ipynb
+++ b/TheDump.ipynb
@@ -80,6 +80,8 @@
    "source": [
     "# one obvious way to analyze text data is to look for specific words in it\n",
     "new_df = df[df['Message'].str.contains('Keyword', na=False)] # replace Keyword with your search term\n",
+    "# adding a '~' inverses the selection\n",
+    "# new_df = df[~df['Message'].str.contains('unwantedKeyword', na=False)]\n",
     "for i in new_df['Message']: # print all entries that contain the Keyword\n",
     "    print(i)"
    ]
